# think-tank

./: .gitignore  LICENSE  README.md  pyproject.toml
memory/: _bootstrap.json
panels/: example_custom.yaml  geopolitical_42.yaml
specs/: example.yaml  ww3_escalation_outlook.yaml  ww3_project_review.yaml
tests/: test_loader.py  test_memory.py  test_schemas.py
think_tank/: __init__.py  __main__.py  agent.py  cli.py  cost.py  loader.py  memory.py  report.py  runner.py  schemas.py
